# deno-fetch-memory-leak

./: fetch-urls  main.js  readme.md  run  urls.txt
rust/: Cargo.toml  compile  main.rs  run
