[package]
name = "rust-reqwest"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
futures = "0.3.30"
num-format = "0.4.4"
psutil = "3.3.0"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "charset", "gzip", "brotli", "deflate"] }
tokio = { version = "1.38.0", features = ["full"] }

[[bin]]
name = "run"
path = "main.rs"
